--- a/server/views/globalPug/home.pug
+++ b/server/views/globalPug/home.pug
@@ -5,8 +5,11 @@ include ../mixins/videoBlock
 block content
     .video
         each video in videos
-            +videoBlock({title:video.title,
-        views:video.views,
-        videoFile:video.videoFile})
+            +videoBlock({
+                id:video.id,
+                title:video.title,
+                views:video.views,
+                videoFile:video.videoFile
+            })
     
             
