--- a/server/views/videoPug/upload.pug
+++ b/server/views/videoPug/upload.pug
@@ -1,9 +1,9 @@
 extends ../layouts/main
 block content
     .form-container
-        form(action=`${routes.video}${routes.upload}`,method='post')
+        form(action=`/videos${routes.upload}`,method='post')
             label(for='File') Video Files
-            input(type='file', name='file', id='file')
-            input(type='text',name='title', placeholder='Title')
-            textarea(name='description',placeholder="Description")
+            input(type='file', name='file', id='file',required=true)
+            input(type='text',name='title', placeholder='Title',required=true)
+            textarea(name='description',placeholder="Description",required=true)
             input(type='submit',value='Upload Video')
